[tool.poetry]
name = "conservancy-forest-carbon"
version = "0.1.0"
description = ""
authors = ["Ilse Paniagua <ilsep@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geemap = "^0.32.0"
pandas = "^2.2.1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
